fix: dark mode secondary color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,7 +80,7 @@
     --popover-foreground: 0 0% 66.2745%;
     --primary: 40 100% 50%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 0 0% 14.1176%;
+    --secondary: 26 4% 40%;
     --secondary-foreground: 0 0% 98.0392%;
     --muted: 0 0% 12.1569%;
     --muted-foreground: 0 0% 63.5294%;
